--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
 /* RESET GLOBAL */
-html, body, #root {
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
 }
@@ -9,4 +11,20 @@ html, body, #root {
 body {
   margin: 0;
   background-color: white;
+}
+
+@keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-down {
+  animation: fade-in-down 0.3s ease-out;
 }
